Fixed missing border fish food ingredients img

--- a/assets/stylesheets/main.sass
+++ b/assets/stylesheets/main.sass
@@ -829,6 +829,7 @@ form input
   @extend .add-cart-form
 
 .ff-ingredient-img
+  @extend .border-grey
   @include horizontal-center
   height: 180px
   width: 100%
